fix/небольшие исправления по оформлению кода

--- a/index.html
+++ b/index.html
@@ -26,42 +26,42 @@
 
       <ul class="gallery">
         <li class="card">
-          <img src="images/karachevsk.jpg" class="card__image">
+          <img src="images/karachevsk.jpg" class="card__image" alt="Храм в горах">
           <div class="card__description">
             <h2 class="card__title">Карачаевск</h2>
             <div class="card__like button-effect"></div>
           </div>
         </li>
         <li class="card">
-          <img src="images/elbrus.jpg" class="card__image">
+          <img src="images/elbrus.jpg" class="card__image" alt="закат над Эльбрусом">
           <div class="card__description">
             <h2 class="card__title">Гора Эльбрус</h2>
             <div class="card__like button-effect"></div>
           </div>
         </li>
         <li class="card">
-          <img src="images/domba.jpg" class="card__image">
+          <img src="images/domba.jpg" class="card__image" alt="Горы Домбая">
           <div class="card__description">
             <h2 class="card__title">Домбай</h2>
             <div class="card__like button-effect"></div>
           </div>
         </li>
         <li class="card">
-          <img src="images/elbrus.jpg" class="card__image">
+          <img src="images/elbrus.jpg" class="card__image" alt="закат над Эльбрусом">
           <div class="card__description">
             <h2 class="card__title">Гора Эльбрус</h2>
             <div class="card__like button-effect"></div>
           </div>
         </li>
         <li class="card">
-          <img src="images/domba.jpg" class="card__image">
+          <img src="images/domba.jpg" class="card__image" alt="Горы Домбая">
           <div class="card__description">
             <h2 class="card__title">Домбай</h2>
             <div class="card__like button-effect"></div>
           </div>
         </li>
         <li class="card">
-          <img src="images/karachevsk.jpg" class="card__image">
+          <img src="images/karachevsk.jpg" class="card__image" alt="Храм в горах">
           <div class="card__description">
             <h2 class="card__title">Карачаево-Черкеск</h2>
             <div class="card__like button-effect"></div>
@@ -89,6 +89,6 @@
       <h1 class="footer__copyright">&#169; 2022 Mesto Russia</h1>
     </footer>
   </div>
-  <script src="script.js"></script>
+  <script src="index.js"></script>
 </body>
 </html>
