fix/исправление замечаний по ревью 2

--- a/index.html
+++ b/index.html
@@ -77,14 +77,16 @@
     </footer>
 
     <div class="popup">
-      <button type="button" class="popup__button-close button-effect"></button>
-      <div class="popup__container">
-        <h2 class="popup__title">Редактировать профиль</h2>
-        <form name="popup" class="popup__form">
-          <input type="text" name="input-name" required placeholder="Имя" class="popup__input popup__input_content_name">
-          <input type="text" name="input-job" required placeholder="Род деятельности" class="popup__input popup__input_content_job">
-          <button type="submit" class="popup__button-save">Сохранить</button>
-        </form>
+      <div class="popup__content">
+        <button type="button" class="popup__button-close button-effect"></button>
+        <div class="popup__container">
+          <h2 class="popup__title">Редактировать профиль</h2>
+          <form name="popup" class="popup__form">
+            <input type="text" name="input-name" required placeholder="Имя" class="popup__input popup__input_content_name">
+            <input type="text" name="input-job" required placeholder="Род деятельности" class="popup__input popup__input_content_job">
+            <button type="submit" class="popup__button-save">Сохранить</button>
+          </form>
+        </div>
       </div>
     </div>
 
