--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
     <template class="card-template">
       <li class="card">
-        <img src="" class="card__image">
+        <img src=" " class="card__image" alt=" ">
         <button type="button" class="card__delete button-effect"></button>
         <div class="card__description">
           <h2 class="card__title"></h2>
@@ -72,7 +72,7 @@
         <div class="card__overlay"></div>
         <div class="popup-card">
           <div class="popup-card__container">
-            <img src="" class="popup-card__image">
+            <img src=" " class="popup-card__image" alt=" ">
             <button type="button" class="popup-card__button button-effect"></button>
             <h2 class="popup-card__title"></h2>
           </div>
