--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <button type="button" class="card__like"></button>
         </div>
         <div class="card__overlay"></div>
-        <div class="popup-card">
+        <div class="popup-card popup">
           <div class="popup-card__container">
             <img src=" " class="popup-card__image" alt=" ">
             <button type="button" class="popup-card__button button-effect"></button>
