--- a/index.html
+++ b/index.html
@@ -39,10 +39,12 @@
       <div class="popup__container">
         <button type="button" class="popup__button-close popup__button-close_profile button-effect"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
-        <form name="popup" class="popup__form popup__form_profile">
-          <input type="text" name="input-name" required placeholder="Имя" class="popup__input popup__input_content_name">
-          <input type="text" name="input-job" required placeholder="Род деятельности" class="popup__input popup__input_content_job">
-          <button type="submit" class="popup__button-save">Сохранить</button>
+        <form novalidate name="popup" class="popup__form popup__form_profile">
+          <input type="text" id="input-name" minlength="2" maxlength="40" name="input-name" required placeholder="Имя" class="popup__input popup__input_profile popup__input_content_name">
+          <span class="popup__error input-name-error"></span>
+          <input type="text" id="input-job" minlength="2" maxlength="200" name="input-job" required placeholder="Род деятельности" class="popup__input popup__input_profile  popup__input_content_job">
+          <span class="popup__error  input-job-error"></span>
+          <button type="submit" class="popup__button-save popup__button-save_profile">Сохранить</button>
         </form>
       </div>
     </div>
@@ -51,10 +53,12 @@
       <div class="popup__container">
         <button type="button" class="popup__button-close popup__button-close_card button-effect"></button>
         <h2 class="popup__title">Новое место</h2>
-        <form name="popup" class="popup__form popup__form_card">
-          <input type="text" name="input-title" required placeholder="Название" class="popup__input popup__input_content_title">
-          <input type="text" name="input-link" required placeholder="Ссылка на картинку" class="popup__input popup__input_content_link">
-          <button type="submit" class="popup__button-save">Сохранить</button>
+        <form novalidate name="popup" class="popup__form popup__form_card">
+          <input type="text" id="input-title" minlength="2" maxlength="30" name="input-title" required placeholder="Название" class="popup__input popup__input_card popup__input_content_title">
+          <span class="popup__error input-title-error"></span>
+          <input type="url" id="input-link" name="input-link" required placeholder="Ссылка на картинку" class="popup__input popup__input_card popup__input_content_link">
+          <span class="popup__error input-link-error"></span>
+          <button type="submit" class="popup__button-save popup__button-save_card">Сохранить</button>
         </form>
       </div>
     </div>
@@ -81,5 +85,6 @@
       </li>
     </template>
   <script src="js/index.js"></script>
+  <script src="js/validate.js"></script>
 </body>
 </html>
