--- a/index.html
+++ b/index.html
@@ -84,8 +84,9 @@
         <div class="card__overlay"></div>
       </li>
     </template>
-  <script src="js/initial-cards.js"></script>
-  <script src="js/index.js"></script>
-  <script src="js/validate.js"></script>
+  <script type="module" src="js/initial-cards.js"></script>
+  <script type="module" src="js/index.js"></script>
+  <script type="module" src="js/card.js"></script>
+  <script type="module" src="js/FormValidator.js"></script>
 </body>
 </html>
