--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <div class="popup-card popup">
       <div class="popup-card__container">
         <img src=" " class="popup-card__image" alt=" ">
-        <button type="button" class="popup-card__button button-effect"></button>
+        <button type="button" class="popup__button-close button-effect"></button>
         <h2 class="popup-card__title"></h2>
       </div>
     </div>
@@ -81,12 +81,11 @@
           <h2 class="card__title"></h2>
           <button type="button" class="card__like"></button>
         </div>
-        <div class="card__overlay"></div>
       </li>
     </template>
   <script type="module" src="js/initial-cards.js"></script>
   <script type="module" src="js/index.js"></script>
-  <script type="module" src="js/card.js"></script>
+  <script type="module" src="js/Сard.js"></script>
   <script type="module" src="js/FormValidator.js"></script>
 </body>
 </html>
