--- a/src/index.html
+++ b/src/index.html
@@ -15,9 +15,10 @@
     <main class="content">
       <section class="profile">
         <div class="profile__info">
-          <img src="<%=require('./images/avatar.jpg')%>" class="profile__avatar" alt="Аватар пользователя">
-          <h1 class="profile__name">Жак-Ив Кусто</h1>
-          <p class="profile__name-subline">Исследователь океана</p>
+          <img src="" class="profile__avatar" alt="Аватар пользователя">
+          <div class="profile__overlay"></div>
+          <h1 class="profile__name"></h1>
+          <p class="profile__name-subline"></p>
           <button type="button" class="profile__button-edit button-effect"></button>
         </div>
         <button type="button" class="profile__button-add button-effect"></button>
@@ -43,7 +44,7 @@
           <span class="popup__error input-name-error"></span>
           <input type="text" id="input-job" minlength="2" maxlength="200" name="inputJob" required placeholder="Род деятельности" class="popup__input popup__input_profile  popup__input_content_job">
           <span class="popup__error  input-job-error"></span>
-          <button type="submit" class="popup__button-save popup__button-save_profile">Сохранить</button>
+          <button type="submit" class="popup__button popup__button-save_profile">Сохранить</button>
         </form>
       </div>
     </div>
@@ -57,7 +58,7 @@
           <span class="popup__error input-title-error"></span>
           <input type="url" id="input-link" name="inputLink" required placeholder="Ссылка на картинку" class="popup__input popup__input_card popup__input_content_link">
           <span class="popup__error input-link-error"></span>
-          <button type="submit" class="popup__button-save popup__button-save_card">Сохранить</button>
+          <button type="submit" class="popup__button popup__button-save_card">Создать</button>
         </form>
       </div>
     </div>
@@ -70,6 +71,28 @@
       </div>
     </div>
 
+    <div class="popup popup_content_delete">
+      <div class="popup__container popup__container_delete">
+        <button type="button" class="popup__button-close popup__button-close_card button-effect"></button>
+        <h2 class="popup__title">Вы уверены ?</h2>
+        <form novalidate name="popup-delete" class="popup__form popup__form_delete">
+          <button type="submit" class="popup__button">Да</button>
+        </form>
+      </div>
+    </div>
+
+    <div class="popup popup_content_avatar">
+      <div class="popup__container popup__container_avatar">
+        <button type="button" class="popup__button-close popup__button-close_card button-effect"></button>
+        <h2 class="popup__title">Обновить аватар</h2>
+        <form novalidate name="popup-avatar" class="popup__form popup__form_avatar">
+          <input type="url" id="input-avatar" name="inputAvatar" required placeholder="Ссылка на изображение" class="popup__input popup__input_avatar">
+          <span class="popup__error input-avatar-error"></span>
+          <button type="submit" class="popup__button">Сохранить</button>
+        </form>
+      </div>
+    </div>
+
   </div>
 
     <template class="card-template">
@@ -78,7 +101,10 @@
         <button type="button" class="card__delete button-effect"></button>
         <div class="card__description">
           <h2 class="card__title"></h2>
-          <button type="button" class="card__like"></button>
+          <div class="card__container">
+            <button type="button" class="card__like"></button>
+            <p class="card__counter-like"></p>
+          </div>
         </div>
       </li>
     </template>
