--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <main class="content">
       <section class="profile">
         <div class="profile__info">
-          <img src="" class="profile__avatar" alt="Аватар пользователя">
+          <img src="<%=require('/src/images/zgl.jpg')%>" class="profile__avatar" alt="Аватар пользователя">
           <div class="profile__overlay"></div>
           <h1 class="profile__name"></h1>
           <p class="profile__name-subline"></p>
