--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
           <span class="popup__error input-name-error"></span>
           <input type="text" id="input-job" minlength="2" maxlength="200" name="inputJob" required placeholder="Род деятельности" class="popup__input popup__input_profile  popup__input_content_job">
           <span class="popup__error  input-job-error"></span>
-          <button type="submit" class="popup__button popup__button-save_profile">Сохранить</button>
+          <button type="submit" class="popup__button">Сохранить</button>
         </form>
       </div>
     </div>
@@ -58,7 +58,7 @@
           <span class="popup__error input-title-error"></span>
           <input type="url" id="input-link" name="inputLink" required placeholder="Ссылка на картинку" class="popup__input popup__input_card popup__input_content_link">
           <span class="popup__error input-link-error"></span>
-          <button type="submit" class="popup__button popup__button-save_card">Создать</button>
+          <button type="submit" class="popup__button">Создать</button>
         </form>
       </div>
     </div>
