fix/ПР9 Исправление недочетов по ревью

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
           <div class="profile__overlay"></div>
           <h1 class="profile__name"></h1>
           <p class="profile__name-subline"></p>
+          <p class="profile__id" style="display: none;"></p>
           <button type="button" class="profile__button-edit button-effect"></button>
         </div>
         <button type="button" class="profile__button-add button-effect"></button>
